# file_checker

./: .flake8  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yaml  entrypoint.sh  pyproject.toml  settings.env.example
conf/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
file_processor/: conftest.py  const.py  models.py  routes.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
file_processor/migrations/: 0001_initial.py
file_processor/services/: validator.py
file_processor/tests/: tests_api.py
file_processor/tests/services/: test_validator.py
nginx/: Dockerfile  default.conf
nginx/static/files/: index.html
nginx/static/files/retrieve/: index.html
nginx/static/login/: index.html
nginx/static/signup/: index.html
nginx/static/upload/: index.html
user/: models.py  tasks.py  test_user.py  urls.py
user/migrations/: 0001_initial.py
